<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signupflex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fappnation.myfoodapplication.Signupflex">
    <SeekBar
        android:layout_alignParentTop="true"
        android:layout_marginTop="124dp"
        android:id="@+id/seekBar"
        android:layout_width="400dp"
        android:layout_height="35dp" />

    <TextView
        android:text="@string/_15"
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/_50"
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/_0"
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/set_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/ideal_daily_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView6"
        android:textSize="22sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <Button
        android:text="Proceed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/Blak1"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView6"
        android:background="@android:color/holo_green_light" />

    <TextView
        android:text="@string/select_a_weekly_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/textView5"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:text="@string/select_diet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="39dp"
        android:textAlignment="center"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_marginTop="14dp"
        android:hint="@string/for_example_900cl"
        android:textAlignment="viewStart"
        android:layout_below="@+id/textView6"
        android:layout_toStartOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode ="dialog"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

</RelativeLayout>
