<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fappnation.myfoodapplication.SignUp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/choose_an_username"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        tools:ignore="LabelFor"
        android:textAlignment="viewStart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Choose a password"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText,LabelFor"
        android:textAlignment="viewStart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/confirm_password"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        tools:ignore="LabelFor"
        android:textAlignment="viewStart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enter_email"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        tools:ignore="LabelFor"
        android:textAlignment="viewStart" />

    <Button
        android:text="@string/register"
        android:id="@+id/Reg321"
        android:layout_marginTop="41dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true" />
</RelativeLayout>