<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_askme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fappnation.myfoodapplication.Askme">

    <Button
        android:text="@string/proceed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:id="@+id/next1"
        android:background="@android:color/holo_green_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/almost_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView35"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_bright" />

    <TextView
        android:text="@string/please_rate_the_following_items_in_order_to_provide_the_best_possible_menu_for_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textSize="19sp"
        android:textStyle="normal|italic"
        android:layout_above="@+id/next1"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="136dp" />
</RelativeLayout>
